Committing to using hazelcast and cleaning out other implementations